dev/ingress/fake84-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake84-ingress
  namespace: fake84-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake84.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake84-service
                port:
                  number: 20084
